crud operations completed

--- a/src/components/CreatBikeModal/CreateBikeModal.module.css
+++ b/src/components/CreatBikeModal/CreateBikeModal.module.css
@@ -33,6 +33,10 @@
 .startAssyBtn:hover {
   background-color: #3657c3;
 }
+.startAssyBtn:disabled {
+  background-color: gray;
+  cursor: not-allowed;
+}
 
 .contentArea {
   display: flex;
