--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 .appContent {
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   /* background-color: #e7e8ec; */
   background-color: #eff0f3;
 }
 .routerOutlet {
+  overflow: auto;
   flex: 1;
 }
 /* #root {
