--- a/src/page/monitor/Monitor.module.css
+++ b/src/page/monitor/Monitor.module.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   padding: 6px 12px;
+  /* flex: 1; */
 }
 .pageHeader {
   font-size: 1.2rem;
@@ -15,7 +16,8 @@
 
 .primaryCard {
   /* border: 1px solid #bdd1ff; */
-  height: 100%;
+  height: auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 14px;
@@ -108,7 +110,7 @@
 }
 
 .row1 {
-  height: 300px;
+  height: 400px;
   display: flex;
   gap: 18px;
 }
