--- a/src/page/assemble/Assemble.module.css
+++ b/src/page/assemble/Assemble.module.css
@@ -5,6 +5,7 @@
   height: 100%;
   overflow: auto;
   padding: 0px 16px;
+  overflow: auto;
 
   /* background-color: aqua; */
   padding-bottom: 12px;
